portfolio/PixelAgentOffice/v0.0.2/user-flow.md
# User Flow — PixelAgentOffice v0.0.2

> v0.0.2(portable EXE) 기준 사용자 플로우. Day 14까지 구현된 실제 화면·동작 흐름.
> 다이어그램은 GitHub에서 mermaid로 렌더링됨. 범례: 실선=구현됨 / `🟡`=부분구현·의도적 보류 / `📋`=계획.
>
> **v0.0.1 → v0.0.2 핵심 변화**: 온보딩이 "+ 채용 펄스 안내 박스"(1단계) → **문 비서 튜토리얼**(첫 실행 자동 연속 안내)로 확장. 진급·메모리·칭찬이 🟡(골격) → ✅(실동작)으로 승격. 일일 비용 상한이 표시만 → **실제 차단**.

---

## 0. 큰 그림 — 전체 진입 플로우

```mermaid
flowchart TD
  A[GitHub Releases에서<br/>portable EXE 다운로드] --> B[.exe 더블클릭]
  B --> C{SmartScreen 경고?}
  C -->|예| C1[추가 정보 → 실행]
  C -->|아니오| D
  C1 --> D[빈 사무실 실행]
  D --> E["문 비서 튜토리얼 시작<br/>'사장님, 어서 오세요' (존댓말)"]
  E --> F[강제 메리 채용<br/>폼 잠금 → 확실한 첫 직원]
  F --> G[채팅·메모·상점·설정<br/>자동 연속 안내 §1.5]
  G --> H[튜토리얼 종료<br/>이후 각 버튼 🎓로 재생]
  H --> I[실제 API 키 등록<br/>→ 사용 루프]
```

핵심 전환: **이전 버전은 Mary·Haewol 더미 2명이 미리 있었지만, v0.0.1부터 빈 사무실 시작 → v0.0.2는 문 비서가 첫 실행을 끝까지 안내**.

---

## 1. 채용 플로우 (HireModal)

```mermaid
flowchart TD
  A[+ 채용 클릭] --> B[채용 모달 열림]
  B --> C{캐릭터 템플릿 선택}
  C -->|Mary 편집자| D[이름·역할·지침·외형<br/>자동 채움]
  C -->|Haewol 작가| D
  C -->|Cody 개발자| D
  C -->|커스텀 문어| E[빈 칸 + 외형 직접 설정]
  D --> F[MBTI 선택 - 선택사항<br/>ⓘ 설명 모달 중첩]
  E --> F
  F --> P[직급 · 진급 방식 선택]
  P --> G[대화 모델 선택]
  G --> H{선택 모델의 API 키 있음?}
  H -->|없음| H1[모델 비활성 + 빨간 안내<br/>+ ⚙ 설정 열기 버튼]
  H1 --> S[설정 모달 중첩<br/>§4]
  S -->|키 등록 후 닫기| G2[채용 모달 입력 그대로 유지]
  G2 --> I
  H -->|있음| I[채용 완료 클릭]
  I --> J{이름·역할 입력됨?}
  J -->|빈칸| J1[빨간 강조 + 중첩 알림 모달]
  J1 --> I
  J -->|OK| K[자동 자리 배치<br/>직급 자격 따라 멤버/리더]
  K --> L[사무실에 캐릭터 등장]
```

**포인트**: 키 없을 때 설정을 열어도 **채용 모달이 닫히지 않고 입력이 보존**됨. 알림은 `window.alert`이 아닌 디자인된 중첩 모달. 첫 실행 튜토리얼 중에는 폼이 메리로 잠겨 첫 채용을 확실히 유도.

---

## 1.5 문 비서 튜토리얼 (Day 14 신규) ✅

```mermaid
flowchart TD
  A[첫 실행 감지] --> B[문 비서 등장<br/>마스코트 카드 + 존댓말]
  B --> C["메인 트랙: 강제 메리 채용까지<br/>FIRST_RUN_STEPS 순차"]
  C --> D{포커스 대상이 화면 밖?}
  D -->|예| D1[먼저 스크롤 → 그 다음 하이라이트<br/>깜빡임 제거]
  D -->|아니오| E[box-shadow 스포트라이트<br/>+ 포인터 통과]
  D1 --> E
  E --> F{정보 팝업 열림?<br/>MBTI ⓘ 등}
  F -->|예| F1[스포트라이트 일시 숨김]
  F --> G[다음 단계: 채팅 → 메모 → 상점 → 설정]
  G --> H[튜토리얼 종료]
  H --> I["멀티 트랙: 각 창 헤더 🎓로<br/>메모지/상점/설정 개별 재생"]
```

**포인트**: 마스코트는 **존댓말 비서 "문 비서"(🐙)**, 사용자 호칭은 "사장님". 버튼은 `[대괄호]` 표기. 채용→대화→메모→상점→설정이 zone 오케스트레이션으로 끊김 없이 연속.

---

## 2. 채팅 플로우 (감정 시스템)

```mermaid
flowchart TD
  A[캐릭터 더블클릭<br/>또는 말풍선 클릭] --> B[우측 하단 채팅창]
  B --> C[메시지 입력 → 전송]
  C --> D[작업 중 표시 …]
  D --> E{LLM 응답}
  E -->|성공| F["본문에서 [emotion:xxx]<br/>태그 파싱·제거"]
  F --> G[머리 위 감정 이모지<br/>5초 표시]
  G --> H[기본 감정으로 복귀<br/>idleEmotion]
  F --> M[totalMessages++<br/>진급 활동 카운터]
  E -->|좋은 답| T[👍 칭찬 → totalPraises++]
  E -->|Rate limit / 일일 한도| I[친절 한글 에러<br/>raw URL 노출 X]
  E -->|중단 클릭| J[AbortController로 취소]
  B --> K[채팅창 닫아도<br/>이력 보존 - 영속화]
```

**system prompt 구성**: 기본 지침 + 커스텀 지침 + MBTI 페르소나 + 감정 태그 지침 + **메모리(기억) 주입 ✅** → LLM 전송. (야간 자동 압축은 🟡 후속)

---

## 3. 사무실 인터랙션 (자리·책상·가구)

```mermaid
flowchart TD
  A[캐릭터 우클릭] --> B[컨텍스트 메뉴]
  B --> C[자리 이동 - 드래그앤드롭]
  B --> D[책상 회전 - front/right/left]
  B --> E[메모지 열기 → §5]
  C --> C1{대상 자리 자격?}
  C1 -->|리더=과장↑ / 사장석=사장↑| C2[이동 OK]
  C1 -->|자격 부족| C3[빨간 표시 + 차단]

  F[가구 우클릭] --> G[가구 메뉴]
  G --> G1[🚚 옮기기 - ghost preview]
  G --> G2[🗑 이 가구 삭제]
  G --> G3[🧹 전체 가구 삭제]

  H[🛒 상점 열기] --> I[가구 카탈로그<br/>픽셀 미리보기]
  I --> J[배치 클릭 → 모달 닫힘]
  J --> K[클릭 위치에 가구 배치<br/>ghost 따라다님]
  I --> L[감정 미리보기 열기<br/>12종 캔버스]
```

---

## 4. 설정 플로우 (API 키 · 중첩)

```mermaid
flowchart TD
  A[⚙ 설정 클릭<br/>또는 채용 모달에서 열기] --> B[설정 모달<br/>채용 위에 중첩 가능]
  B --> C[API 키 설정 열기<br/>→ ApiKeyModal 분리 - Day 14]
  C --> C1[Google / Anthropic 키 입력]
  C1 --> D[저장 → OS 키체인 암호화]
  D --> E[저장됨 배지]
  B --> F[기본 모델 · 메모리 모델]
  B --> G[일일 한도 USD<br/>✅ 실제 차단 기준]
  B --> P[진급 속도 배수]
  B --> H[사용량 상세 표<br/>모델별 RPM 막대]
  B --> I[backdrop 드래그해도<br/>안 닫힘 - mousedown 기준]
```

**중첩**: 채용 모달에서 설정을 열면 설정이 zIndex 위로 떠서 중첩 표시 → 키 등록 후 닫으면 채용 입력 유지. API 키 입력은 별도 `ApiKeyModal`로 분리(Day 14 재설계).

---

## 5. 직원 관리 (메모지 · 진급 · 해고)

```mermaid
flowchart TD
  A[책상 옆 📝 메모지 클릭] --> B[메모 모달]
  B --> C[커스텀 지침 편집<br/>→ totalMemoryUpdates++]
  B --> D[🎭 기본 감정 선택 - 12종]
  B --> N[🧠 기억 섹션<br/>대화에서 기억 정리 - 수동 요약]
  B --> F["활동 통계 + 진급 진행도<br/>✅ 대화·메모·칭찬 카운트"]
  B --> E[모델 · 메모리 모델 변경]
  B --> G[🗑 해고]
  G --> H{확인?}
  H -->|예| I[직원 제거 + 자리 정리<br/>+ 채팅 이력 삭제]
```

---

## 5.5 진급 플로우 (Day 13 신규) ✅

```mermaid
flowchart TD
  A[대화·메모·칭찬 누적] --> B{진급 방식별 기준 달성?<br/>활동/시간/정성/혼합/끔}
  B -->|달성| C[진급 요청 모달<br/>PromotionModal]
  C --> D{사장 승인?}
  D -->|승인| E[직급 상승 + 팻말 갱신]
  E --> F{부장 상한 도달?}
  F -->|예| G[자동 상한 - 이사는 수동 임명]
  D -->|보류| H[다음 기회까지 대기]
```

**포인트**: 9단계 직급 + 진급 방식 5종. 판정은 순수 함수(`promotion.ts`, 유닛 테스트 커버). 설정의 진급 속도 배수로 난이도 조절.

---

## 6. 시그니처 — 시간대 · 강제 야간 (이제 실제 차단)

```mermaid
flowchart TD
  A[시간 경과] --> B[5단계 자동 전환<br/>아침/점심/노을/저녁/밤]
  C[유료 모델 채팅 → 일일 비용 상승] --> D[토큰 보드 🟢→🟡→🔴<br/>깜빡임]
  D --> E{일일 한도 도달?}
  E -->|예| F["dispatch 단계 실제 차단<br/>친절 안내 + 강제 야간"]
  F --> G[자정 지나면 초기화<br/>→ 다시 밝아짐]
  F --> H[🟡 캐릭터 성격별 반응 - 계획]
  F --> I[🟡 야간 메모리 자동 압축 - 계획]
```

**포인트**: 강제 야간은 RPM이 아니라 **예산(일일 비용) 기준**으로 일원화. 한도·차단은 유료(Claude)만 집계, 무료 Gemini는 한도 무관.

---

## 7. 미구현/계획 흐름 (정직 표기)

| 흐름 | 상태 |
|---|---|
| 진급 요청 모달 (활동 누적 → 캐릭터가 진급 요청 → 승인) | ✅ Day 13 완성 (카운터 연결) |
| 메모리 누적·주입 | ✅ 저장·주입·수동 요약 동작 (4모드 셀렉터·야간 자동 압축은 🟡) |
| 칭찬 👍 버튼 → 카운트 | ✅ Day 13 완성 |
| 튜토리얼/온보딩 단계별 가이드 | ✅ Day 14 문 비서 튜토리얼 완성 (T1 피드백 대응) |
| 캐릭터 성격별 야간 반응 (M5-d) | 🟡 계획 |
| Floor 2 Team Office / Seegene 임포트 | 📋 Phase 2 / v3 해자 후보 |

---

**기준 버전**: v0.0.2 (2026-06-24, Day 14)
**관련 문서**: [PRD.md](PRD.md) · [wireframes.html](wireframes.html) · [FEATURES.md](FEATURES.md)
